hphp/test/zend/good/tests/classes/abstract.php.expectf
Call to function show()

Fatal error: Cannot call abstract method fail::show() in %s/abstract.php on line 12
